# spectre

./: .clang-tidy  .codecov.yaml  .gitignore  .travis.yml  .zenodo.json  CMakeLists.txt  Metadata.yaml
src/Elliptic/DiscontinuousGalerkin/Python/: ApplyOperator.hpp  Bindings.cpp  BuildOperatorMatrix.hpp  CMakeLists.txt  CreateElements.hpp  DgElementArray.hpp  ElasticityOperator.cpp  PoissonOperator.cpp  XctsOperator.cpp
src/Elliptic/Executables/Elasticity/: CMakeLists.txt  SolveElasticity.hpp  SolveElasticityProblem.hpp  SolveElasticityProblemFwd.hpp
src/Elliptic/Executables/Xcts/: CMakeLists.txt  SolveXcts.hpp  SolveXctsFwd.hpp  SolveXctsProblem.hpp  SolveXctsProblemFwd.hpp
src/Elliptic/Systems/Xcts/: CMakeLists.txt  Constraints.hpp  Equations.cpp  Equations.hpp  FirstOrderSystem.hpp  FluxesAndSources.cpp  FluxesAndSources.hpp  Geometry.hpp  Tags.hpp  Xcts.hpp
src/NumericalAlgorithms/LinearSolver/: BuildMatrix.hpp  CMakeLists.txt  ExplicitInverse.hpp  Gmres.cpp  Gmres.hpp  IncompleteLU.hpp  LinearSolver.hpp  Observe.hpp  Petsc.hpp  Tags.hpp
src/NumericalAlgorithms/LinearSolver/ConjugateGradient/: ConjugateGradient.hpp  ElementActions.hpp  InitializeElement.hpp  ResidualMonitor.hpp  ResidualMonitorActions.hpp
src/NumericalAlgorithms/LinearSolver/Gmres/: ElementActions.hpp  Gmres.hpp  InitializeElement.hpp  ResidualMonitor.hpp  ResidualMonitorActions.hpp
src/NumericalAlgorithms/LinearSolver/Python/: Bindings.cpp  CMakeLists.txt  Gmres.cpp
src/ParallelAlgorithms/: CMakeLists.txt  Tags.hpp
src/ParallelAlgorithms/Actions/: MutateApply.hpp  ReceiveBroadcast.hpp  SetData.hpp
src/ParallelAlgorithms/Amr/: Flag.cpp  Helpers.cpp  Helpers.hpp  UpdateAmrDecision.cpp  UpdateAmrDecision.hpp
src/ParallelAlgorithms/Amr/Actions/: AdjustDomain.hpp  RunAmrDiagnostics.hpp
src/ParallelAlgorithms/Amr/Criteria/: Factory.hpp  IncreaseResolution.cpp  IncreaseResolution.hpp  Persson.cpp  Persson.hpp  TruncationError.cpp  TruncationError.hpp
src/ParallelAlgorithms/ApparentHorizons/: FastFlow.cpp  SpherepackIterator.cpp  Strahlkorper.cpp  Strahlkorper.hpp  StrahlkorperGr.cpp  StrahlkorperGr.hpp  Tags.cpp  Tags.hpp  YlmSpherepack.cpp  YlmSpherepack.hpp  YlmSpherepackHelper.cpp
src/ParallelAlgorithms/DiscontinuousGalerkin/: CollectDataForFluxes.hpp  FluxCommunication.hpp  HasReceivedFromAllMortars.hpp  InitializeDomain.hpp  InitializeInterfaces.hpp  InitializeMortars.hpp
src/ParallelAlgorithms/Events/: CMakeLists.txt  Factory.hpp  ObserveAtPoint.hpp  ObserveErrorNorms.hpp  ObserveExcisions.hpp  ObserveFields.hpp  ObserveNorms.hpp  ObserveVolumeIntegrals.hpp
src/ParallelAlgorithms/EventsAndTriggers/: Completion.cpp  Completion.hpp
src/ParallelAlgorithms/Initialization/: MergeIntoDataBox.hpp
src/ParallelAlgorithms/Interpolation/Actions/: InterpolatorRegisterElement.hpp
src/ParallelAlgorithms/Interpolation/Callbacks/: FindApparentHorizon.hpp  ObserveTimeSeriesOnSurface.hpp
src/ParallelAlgorithms/LinearSolver/: CMakeLists.txt  Observe.hpp  Tags.hpp
src/ParallelAlgorithms/LinearSolver/Actions/: BuildMatrix.hpp  MakeIdentityIfSkipped.hpp  TerminateIfConverged.hpp
src/ParallelAlgorithms/LinearSolver/AsynchronousSolvers/: ElementActions.hpp
src/ParallelAlgorithms/LinearSolver/ConjugateGradient/: CMakeLists.txt  ConjugateGradient.hpp  ElementActions.hpp  InitializeElement.hpp  ResidualMonitor.hpp  ResidualMonitorActions.hpp
src/ParallelAlgorithms/LinearSolver/Gmres/: CMakeLists.txt  ElementActions.hpp  Gmres.hpp  InitializeElement.hpp  ResidualMonitor.hpp  ResidualMonitorActions.hpp
src/ParallelAlgorithms/LinearSolver/Multigrid/: CMakeLists.txt  ElementActions.hpp  ElementsAllocator.hpp  ElementsRegistration.hpp  InterMeshOperators.cpp  InterMeshOperators.hpp  MeshHierarchy.cpp  MeshHierarchy.hpp  Multigrid.hpp  ObserveVolumeData.hpp  Tags.hpp
src/ParallelAlgorithms/LinearSolver/None/: None.hpp
src/ParallelAlgorithms/LinearSolver/Richardson/: Richardson.hpp  Tags.hpp
src/ParallelAlgorithms/LinearSolver/Schwarz/: CMakeLists.txt  ComputeTags.hpp  DgOverlapData.hpp  ElementActions.hpp  ElementCenteredSubdomainData.hpp  InitializeElement.hpp  OverlapHelpers.cpp  OverlapHelpers.hpp  Protocols.hpp  Schwarz.hpp  SubdomainActions.hpp  SubdomainBoundaryData.hpp  SubdomainData.hpp  SubdomainHelpers.hpp  Tags.hpp  Weight.hpp
src/ParallelAlgorithms/NonlinearSolver/: CMakeLists.txt  Damping.hpp  Observe.hpp  Tags.hpp
src/ParallelAlgorithms/NonlinearSolver/Actions/: TerminateIfConverged.hpp
src/ParallelAlgorithms/NonlinearSolver/NewtonRaphson/: CMakeLists.txt  ElementActions.hpp  InitializeElement.hpp  LineSearch.cpp  LineSearch.hpp  NewtonRaphson.hpp  ResidualMonitor.hpp  ResidualMonitorActions.hpp
src/ParallelAlgorithms/SurfaceFinder/: Component.hpp  Tags.hpp
src/PointwiseFunctions/AnalyticData/Elasticity/: AnalyticData.hpp  CMakeLists.txt  Mirror.cpp  Mirror.hpp
src/PointwiseFunctions/AnalyticData/Punctures/: CMakeLists.txt  MultiplePunctures.cpp  MultiplePunctures.hpp
src/PointwiseFunctions/AnalyticData/Xcts/: AnalyticData.cpp  AnalyticData.hpp  Binary.cpp  Binary.hpp  BlackHoleBinary.cpp  BlackHoleBinary.hpp  CMakeLists.txt  CommonVariables.hpp  CommonVariables.tpp  NeutronStarBinary.cpp  NeutronStarBinary.hpp  NeutronStarHeadOnCollision.cpp  NeutronStarHeadOnCollision.hpp
src/PointwiseFunctions/AnalyticSolutions/Xcts/: AnalyticSolution.hpp  CMakeLists.txt  ConstantDensityStar.cpp  ConstantDensityStar.hpp  Factory.hpp  Flatness.cpp  Flatness.hpp  Kerr.cpp  Kerr.hpp  Schwarzschild.cpp  Schwarzschild.hpp  TovStar.cpp  TovStar.hpp  Vacuum.cpp  Vacuum.hpp  WrappedGr.cpp  WrappedGr.hpp
src/PointwiseFunctions/BoundaryConditions/Elasticity/: CMakeLists.txt  LaserBeam.cpp  LaserBeam.hpp
tests/Unit/Elliptic/DiscontinuousGalerkin/: CMakeLists.txt  OperatorMatrixTestHelpers.hpp  TestHelpers.cpp  TestHelpers.hpp  Test_DgOperator.cpp  Test_ImposeBoundaryConditions.cpp  Test_ImposeInhomogeneousBoundaryConditionsOnSource.cpp  (+6 more)
tests/Unit/ParallelAlgorithms/: CMakeLists.txt  Test_Tags.cpp
tests/Unit/RunSingleTest/: CMakeLists.txt  RunSingleTest.cpp
(+1364 files in other folders)
